Fix mobile horizontal scroll

--- a/builds/css/style.css
+++ b/builds/css/style.css
@@ -11,8 +11,8 @@ body {
 	font-family:'Lato',sans-serif;
 }
 
-main {
-	overflow-x:scroll;
+html {
+	overflow-x:auto;
 }
 
 .span-spacing {
